diesel_compile_tests/tests/compile-fail/insert_requires_value_of_same_type_as_column.rs
#[macro_use]
extern crate diesel;

use diesel::*;
use diesel::pg::PgConnection;

table! {
    users {
        id -> Integer,
        name -> Text,
        hair_color -> Text,
    }
}

fn main() {
    use users::dsl::*;
    let conn = PgConnection::establish("").unwrap();

    insert(&name.eq(1));
    //~^ ERROR E0277
}
